src/g4/PIE3Parser.ts
// Generated from ./g4/PIE3.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { PIE3Listener } from "./PIE3Listener";
import { PIE3Visitor } from "./PIE3Visitor";


export class PIE3Parser extends Parser {
	public static readonly PIE = 1;
	public static readonly TYPE = 2;
	public static readonly INTERPOLATE = 3;
	public static readonly EVENT = 4;
	public static readonly TEXTURE = 5;
	public static readonly NORMALMAP = 6;
	public static readonly SPECULARMAP = 7;
	public static readonly LEVELS = 8;
	public static readonly LEVEL = 9;
	public static readonly POINTS = 10;
	public static readonly POLYGONS = 11;
	public static readonly CONNECTORS = 12;
	public static readonly NORMALS = 13;
	public static readonly ANIMOBJECT = 14;
	public static readonly INT = 15;
	public static readonly FLOAT = 16;
	public static readonly NEG_NUMBER = 17;
	public static readonly SCI_NUMBER = 18;
	public static readonly NEG_SCI_NUMBER = 19;
	public static readonly STRING = 20;
	public static readonly WS = 21;
	public static readonly COMMENT = 22;
	public static readonly RULE_pieFile = 0;
	public static readonly RULE_pieHeader = 1;
	public static readonly RULE_pieBody = 2;
	public static readonly RULE_levelsHeader = 3;
	public static readonly RULE_levelList = 4;
	public static readonly RULE_level = 5;
	public static readonly RULE_pieVersion = 6;
	public static readonly RULE_typeInfo = 7;
	public static readonly RULE_interpolateInfo = 8;
	public static readonly RULE_eventInfo = 9;
	public static readonly RULE_textureInfo = 10;
	public static readonly RULE_normalMap = 11;
	public static readonly RULE_specularMap = 12;
	public static readonly RULE_pointsData = 13;
	public static readonly RULE_pointList = 14;
	public static readonly RULE_point = 15;
	public static readonly RULE_normalsData = 16;
	public static readonly RULE_normalsList = 17;
	public static readonly RULE_normal = 18;
	public static readonly RULE_number = 19;
	public static readonly RULE_polygonsData = 20;
	public static readonly RULE_polygonList = 21;
	public static readonly RULE_polygon = 22;
	public static readonly RULE_cornerData = 23;
	public static readonly RULE_connectorData = 24;
	public static readonly RULE_connectorList = 25;
	public static readonly RULE_connector = 26;
	public static readonly RULE_animObjectData = 27;
	public static readonly RULE_animFrameList = 28;
	public static readonly RULE_animFrame = 29;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"pieFile", "pieHeader", "pieBody", "levelsHeader", "levelList", "level", 
		"pieVersion", "typeInfo", "interpolateInfo", "eventInfo", "textureInfo", 
		"normalMap", "specularMap", "pointsData", "pointList", "point", "normalsData", 
		"normalsList", "normal", "number", "polygonsData", "polygonList", "polygon", 
		"cornerData", "connectorData", "connectorList", "connector", "animObjectData", 
		"animFrameList", "animFrame",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'PIE'", "'TYPE'", "'INTERPOLATE'", "'EVENT'", "'TEXTURE'", 
		"'NORMALMAP'", "'SPECULARMAP'", "'LEVELS'", "'LEVEL'", "'POINTS'", "'POLYGONS'", 
		"'CONNECTORS'", "'NORMALS'", "'ANIMOBJECT'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "PIE", "TYPE", "INTERPOLATE", "EVENT", "TEXTURE", "NORMALMAP", 
		"SPECULARMAP", "LEVELS", "LEVEL", "POINTS", "POLYGONS", "CONNECTORS", 
		"NORMALS", "ANIMOBJECT", "INT", "FLOAT", "NEG_NUMBER", "SCI_NUMBER", "NEG_SCI_NUMBER", 
		"STRING", "WS", "COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PIE3Parser._LITERAL_NAMES, PIE3Parser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return PIE3Parser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "PIE3.g4"; }

	// @Override
	public get ruleNames(): string[] { return PIE3Parser.ruleNames; }

	// @Override
	public get serializedATN(): string { return PIE3Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PIE3Parser._ATN, this);
	}
	// @RuleVersion(0)
	public pieFile(): PieFileContext {
		let _localctx: PieFileContext = new PieFileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PIE3Parser.RULE_pieFile);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 60;
			this.pieHeader();
			this.state = 61;
			this.pieBody();
			this.state = 62;
			this.match(PIE3Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pieHeader(): PieHeaderContext {
		let _localctx: PieHeaderContext = new PieHeaderContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, PIE3Parser.RULE_pieHeader);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 64;
			this.match(PIE3Parser.PIE);
			this.state = 65;
			this.pieVersion();
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PIE3Parser.TYPE) {
				{
				this.state = 66;
				this.typeInfo();
				}
			}

			this.state = 70;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PIE3Parser.INTERPOLATE) {
				{
				this.state = 69;
				this.interpolateInfo();
				}
			}

			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PIE3Parser.TEXTURE) {
				{
				this.state = 72;
				this.textureInfo();
				}
			}

			this.state = 78;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PIE3Parser.EVENT) {
				{
				{
				this.state = 75;
				this.eventInfo();
				}
				}
				this.state = 80;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 82;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PIE3Parser.NORMALMAP) {
				{
				this.state = 81;
				this.normalMap();
				}
			}

			this.state = 85;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PIE3Parser.SPECULARMAP) {
				{
				this.state = 84;
				this.specularMap();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pieBody(): PieBodyContext {
		let _localctx: PieBodyContext = new PieBodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, PIE3Parser.RULE_pieBody);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 87;
			this.levelsHeader();
			this.state = 88;
			this.levelList();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public levelsHeader(): LevelsHeaderContext {
		let _localctx: LevelsHeaderContext = new LevelsHeaderContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, PIE3Parser.RULE_levelsHeader);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 90;
			this.match(PIE3Parser.LEVELS);
			this.state = 91;
			this.match(PIE3Parser.INT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public levelList(): LevelListContext {
		let _localctx: LevelListContext = new LevelListContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PIE3Parser.RULE_levelList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 94;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 93;
				this.level();
				}
				}
				this.state = 96;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === PIE3Parser.LEVEL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public level(): LevelContext {
		let _localctx: LevelContext = new LevelContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, PIE3Parser.RULE_level);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 98;
			this.match(PIE3Parser.LEVEL);
			this.state = 99;
			this.match(PIE3Parser.INT);
			this.state = 107;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE3Parser.POINTS) | (1 << PIE3Parser.POLYGONS) | (1 << PIE3Parser.CONNECTORS) | (1 << PIE3Parser.NORMALS) | (1 << PIE3Parser.ANIMOBJECT))) !== 0)) {
				{
				this.state = 105;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case PIE3Parser.POINTS:
					{
					this.state = 100;
					this.pointsData();
					}
					break;
				case PIE3Parser.NORMALS:
					{
					this.state = 101;
					this.normalsData();
					}
					break;
				case PIE3Parser.POLYGONS:
					{
					this.state = 102;
					this.polygonsData();
					}
					break;
				case PIE3Parser.CONNECTORS:
					{
					this.state = 103;
					this.connectorData();
					}
					break;
				case PIE3Parser.ANIMOBJECT:
					{
					this.state = 104;
					this.animObjectData();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 109;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pieVersion(): PieVersionContext {
		let _localctx: PieVersionContext = new PieVersionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, PIE3Parser.RULE_pieVersion);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 110;
			this.match(PIE3Parser.INT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeInfo(): TypeInfoContext {
		let _localctx: TypeInfoContext = new TypeInfoContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, PIE3Parser.RULE_typeInfo);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 112;
			this.match(PIE3Parser.TYPE);
			this.state = 113;
			this.match(PIE3Parser.INT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interpolateInfo(): InterpolateInfoContext {
		let _localctx: InterpolateInfoContext = new InterpolateInfoContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, PIE3Parser.RULE_interpolateInfo);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 115;
			this.match(PIE3Parser.INTERPOLATE);
			this.state = 116;
			this.match(PIE3Parser.INT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public eventInfo(): EventInfoContext {
		let _localctx: EventInfoContext = new EventInfoContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, PIE3Parser.RULE_eventInfo);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 118;
			this.match(PIE3Parser.EVENT);
			this.state = 119;
			this.match(PIE3Parser.INT);
			this.state = 120;
			this.match(PIE3Parser.STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public textureInfo(): TextureInfoContext {
		let _localctx: TextureInfoContext = new TextureInfoContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, PIE3Parser.RULE_textureInfo);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 122;
			this.match(PIE3Parser.TEXTURE);
			this.state = 123;
			this.match(PIE3Parser.INT);
			this.state = 124;
			this.match(PIE3Parser.STRING);
			this.state = 125;
			this.match(PIE3Parser.INT);
			this.state = 126;
			this.match(PIE3Parser.INT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public normalMap(): NormalMapContext {
		let _localctx: NormalMapContext = new NormalMapContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, PIE3Parser.RULE_normalMap);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 128;
			this.match(PIE3Parser.NORMALMAP);
			this.state = 129;
			this.match(PIE3Parser.INT);
			this.state = 130;
			this.match(PIE3Parser.STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public specularMap(): SpecularMapContext {
		let _localctx: SpecularMapContext = new SpecularMapContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, PIE3Parser.RULE_specularMap);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			this.match(PIE3Parser.SPECULARMAP);
			this.state = 133;
			this.match(PIE3Parser.INT);
			this.state = 134;
			this.match(PIE3Parser.STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pointsData(): PointsDataContext {
		let _localctx: PointsDataContext = new PointsDataContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, PIE3Parser.RULE_pointsData);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 136;
			this.match(PIE3Parser.POINTS);
			this.state = 137;
			this.match(PIE3Parser.INT);
			this.state = 138;
			this.pointList();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pointList(): PointListContext {
		let _localctx: PointListContext = new PointListContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, PIE3Parser.RULE_pointList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 141;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 140;
				this.point();
				}
				}
				this.state = 143;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE3Parser.INT) | (1 << PIE3Parser.FLOAT) | (1 << PIE3Parser.NEG_NUMBER) | (1 << PIE3Parser.SCI_NUMBER) | (1 << PIE3Parser.NEG_SCI_NUMBER))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public point(): PointContext {
		let _localctx: PointContext = new PointContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, PIE3Parser.RULE_point);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			this.number();
			this.state = 146;
			this.number();
			this.state = 147;
			this.number();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public normalsData(): NormalsDataContext {
		let _localctx: NormalsDataContext = new NormalsDataContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, PIE3Parser.RULE_normalsData);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this.match(PIE3Parser.NORMALS);
			this.state = 150;
			this.match(PIE3Parser.INT);
			this.state = 151;
			this.normalsList();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public normalsList(): NormalsListContext {
		let _localctx: NormalsListContext = new NormalsListContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, PIE3Parser.RULE_normalsList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 154;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 153;
				this.normal();
				}
				}
				this.state = 156;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE3Parser.INT) | (1 << PIE3Parser.FLOAT) | (1 << PIE3Parser.NEG_NUMBER) | (1 << PIE3Parser.SCI_NUMBER) | (1 << PIE3Parser.NEG_SCI_NUMBER))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public normal(): NormalContext {
		let _localctx: NormalContext = new NormalContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, PIE3Parser.RULE_normal);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 158;
			this.number();
			this.state = 159;
			this.number();
			this.state = 160;
			this.number();
			this.state = 167;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 161;
					this.number();
					this.state = 162;
					this.number();
					this.state = 163;
					this.number();
					}
					}
				}
				this.state = 169;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public number(): NumberContext {
		let _localctx: NumberContext = new NumberContext(this._ctx, this.state);
		this.enterRule(_localctx, 38, PIE3Parser.RULE_number);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 170;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE3Parser.INT) | (1 << PIE3Parser.FLOAT) | (1 << PIE3Parser.NEG_NUMBER) | (1 << PIE3Parser.SCI_NUMBER) | (1 << PIE3Parser.NEG_SCI_NUMBER))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public polygonsData(): PolygonsDataContext {
		let _localctx: PolygonsDataContext = new PolygonsDataContext(this._ctx, this.state);
		this.enterRule(_localctx, 40, PIE3Parser.RULE_polygonsData);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 172;
			this.match(PIE3Parser.POLYGONS);
			this.state = 173;
			this.match(PIE3Parser.INT);
			this.state = 174;
			this.polygonList();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public polygonList(): PolygonListContext {
		let _localctx: PolygonListContext = new PolygonListContext(this._ctx, this.state);
		this.enterRule(_localctx, 42, PIE3Parser.RULE_polygonList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 177;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 176;
				this.polygon();
				}
				}
				this.state = 179;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === PIE3Parser.INT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public polygon(): PolygonContext {
		let _localctx: PolygonContext = new PolygonContext(this._ctx, this.state);
		this.enterRule(_localctx, 44, PIE3Parser.RULE_polygon);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 181;
			this.match(PIE3Parser.INT);
			this.state = 182;
			this.match(PIE3Parser.INT);
			this.state = 183;
			this.cornerData();
			this.state = 189;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 184;
					this.number();
					this.state = 185;
					this.number();
					}
					}
				}
				this.state = 191;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public cornerData(): CornerDataContext {
		let _localctx: CornerDataContext = new CornerDataContext(this._ctx, this.state);
		this.enterRule(_localctx, 46, PIE3Parser.RULE_cornerData);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 193;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 192;
					this.match(PIE3Parser.INT);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 195;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public connectorData(): ConnectorDataContext {
		let _localctx: ConnectorDataContext = new ConnectorDataContext(this._ctx, this.state);
		this.enterRule(_localctx, 48, PIE3Parser.RULE_connectorData);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 197;
			this.match(PIE3Parser.CONNECTORS);
			this.state = 198;
			this.match(PIE3Parser.INT);
			this.state = 199;
			this.connectorList();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public connectorList(): ConnectorListContext {
		let _localctx: ConnectorListContext = new ConnectorListContext(this._ctx, this.state);
		this.enterRule(_localctx, 50, PIE3Parser.RULE_connectorList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 202;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 201;
				this.connector();
				}
				}
				this.state = 204;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE3Parser.INT) | (1 << PIE3Parser.FLOAT) | (1 << PIE3Parser.NEG_NUMBER) | (1 << PIE3Parser.SCI_NUMBER) | (1 << PIE3Parser.NEG_SCI_NUMBER))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public connector(): ConnectorContext {
		let _localctx: ConnectorContext = new ConnectorContext(this._ctx, this.state);
		this.enterRule(_localctx, 52, PIE3Parser.RULE_connector);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 206;
			this.number();
			this.state = 207;
			this.number();
			this.state = 208;
			this.number();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
